--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="column"> <!-- first column -->
             <div class="trinket">
-                <img class="trinket-image" src="images/Airpods.JPG">
+                <img class="trinket-image" src="./images/Airpods.JPG">
                 <h3> Airpods</h3>
                 <h4> Delusha Wanigasuriya </h4>
                 <p> A small white case with bluetooth earphones inside</p>
