--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="column"> <!-- first column -->
             <div class="trinket">
-                <img class="trinket-image" src="images/Airpods.JPG">
+                <img class="trinket-image" src="Images/Airpods.JPG">
                 <h3> Airpods</h3>
                 <h4> Delusha Wanigasuriya </h4>
                 <p> A small white case with bluetooth earphones inside</p>
@@ -24,7 +24,7 @@
                 <span class="tag"> white</span>
             </div>
             <div class="trinket">
-                <img class="trinket-image" src="images/bracelet.jpg">
+                <img class="trinket-image" src="Images/bracelet.jpg">
                 <h3>Bracelet</h3>
                 <h4> Yilin Li</h4>
                 <p> A hand-woven bracelet with a gold-plated ornaments</p>
@@ -33,7 +33,7 @@
                 <span class="tag"> gift</span>
             </div>
             <div class="trinket">
-                <img class="trinket-image" src="images/Breastpin.jpg">
+                <img class="trinket-image" src="Images/Breastpin.jpg">
                 <h3> Breastpin</h3>
                 <h4> Bella Wu</h4>
                 <p> a metallic blue jewelry</p>
@@ -42,7 +42,7 @@
                 <span class="tag"> twinkle</span>
             </div>
             <div class="trinket">
-                <img class="trinket-image" src="images/cookingmama.jpg">
+                <img class="trinket-image" src="Images/cookingmama.jpg">
                 <h3> Cooking Mama</h3>
                 <h4> Anosha Khalid</h4>
                 <p> Nintendo DS lite game chip </p>
@@ -51,7 +51,7 @@
                 <span class="tag"> plastic</span>
             </div>
             <div class="trinket">
-                <img class="trinket-image" src="images/crystalbear.jpg">
+                <img class="trinket-image" src="Images/crystalbear.jpg">
                 <h3> Crystal Bear</h3>
                 <h4> Sammi Lam</h4>
                 <p> A clear, bear-shaped keychain</p>
@@ -60,7 +60,7 @@
                 <span class="tag"> clear</span>
             </div>
             <div class="trinket">
-                <img class="trinket-image" src="images/Earring.jpeg">
+                <img class="trinket-image" src="Images/Earring.jpeg">
                 <h3> Earring</h3>
                 <h4> Michelle Bagchi</h4>
                 <p>a metal jewelry</p>
@@ -69,7 +69,7 @@
                 <span class="tag"> handy</span>
             </div>
             <div class="trinket">
-                <img class="trinket-image" src="images/eyeball-ring.jpg">
+                <img class="trinket-image" src="Images/eyeball-ring.jpg">
                 <h3> Eye ring</h3>
                 <h4> Sadie Lambert</h4>
                 <p>silver ring with a blue glass eyeball on it</p>
@@ -78,7 +78,7 @@
                 <span class="tag"> blue</span>
             </div>
             <div class="trinket">
-                <img class="trinket-image" src="images/filmroll.jpg">
+                <img class="trinket-image" src="Images/filmroll.jpg">
                 <h3> Film Case</h3>
                 <h4> Amani Mohamed</h4>
                 <p>the outter shell of a film roll</p>
@@ -90,7 +90,7 @@
         </div>
         <div class="column"> <!--Column 2-->
             <div class="trinket">
-                <img class="trinket-image" src="images/bracelet.jpg">
+                <img class="trinket-image" src="Images/bracelet.jpg">
                 <h3> Flower Bracelet</h3>
                 <h4> Samantha Liu</h4>
                 <p>woven bracelet made from blue, yellow and white strings that forms a flower pattern.</p>
@@ -99,7 +99,7 @@
                 <span class="tag"> accessory</span>
             </div>
             <div class="trinket">
-                <img class="trinket-image" src="images/friendship-ring.jpg">
+                <img class="trinket-image" src="Images/friendship-ring.jpg">
                 <h3> Friendship Ring</h3>
                 <h4> Esther Sales</h4>
                 <p>Friendship ring with Omama</p>
@@ -108,7 +108,7 @@
                 <span class="tag"> ring</span>
             </div>
             <div class="trinket">
-                <img class="trinket-image" src="images/frog.jpg">
+                <img class="trinket-image" src="Images/frog.jpg">
                 <h3> Frog</h3>
                 <h4> Sterling Wedge</h4>
                 <p>a small metal frog.</p>
@@ -117,7 +117,7 @@
                 <span class="tag"> gift</span>
             </div>
             <div class="trinket">
-                <img class="trinket-image" src="images/goldface_earrings.jpg">
+                <img class="trinket-image" src="Images/goldface_earrings.jpg">
                 <h3> Goldface Earring</h3>
                 <h4> Uzoma Ekpunobi</h4>
                 <p>earring with goldface on it</p>
@@ -126,7 +126,7 @@
                 <span class="tag"> face</span>
             </div>
             <div class="trinket">
-                <img class="trinket-image" src="images/handsome-dog.jpg">
+                <img class="trinket-image" src="Images/handsome-dog.jpg">
                 <h3> Handsome Dog</h3>
                 <h4>Finnbogi Örn</h4>
                 <p>a small enamel pin, subject is a dog with a human face</p>
@@ -135,7 +135,7 @@
                 <span class="tag"> stylish</span>
             </div>
             <div class="trinket">
-                <img class="trinket-image" src="images/heart earrings.jpg">
+                <img class="trinket-image" src="Images/heart earrings.jpg">
                 <h3> Heart Earring</h3>
                 <h4>Omama Mahomood</h4>
                 <p>A pink heart-shaped earring that was given to me by one of my best friends for my 20th birthday.</p>
@@ -144,7 +144,7 @@
                 <span class="tag"> heart</span>
             </div>
             <div class="trinket">
-                <img class="trinket-image" src="images/heart-connector.JPG">
+                <img class="trinket-image" src="Images/heart-connector.JPG">
                 <h3> Heart Headphone Splitter</h3>
                 <h4> Kelly Chen</h4>
                 <p>A pink heart-shaped, two-way headphone splitter. Useful when sharing music between friends or family.
@@ -154,7 +154,7 @@
                 <span class="tag"> keychain</span>
             </div>
             <div class="trinket">
-                <img class="trinket-image" src="images/keychiain.jpeg">
+                <img class="trinket-image" src="Images/keychiain.jpeg">
                 <h3> Keychain</h3>
                 <h4> Sydney Dambrough</h4>
                 <p>black and white knotted rope ckeychain with metal end caps.</p>
@@ -163,7 +163,7 @@
                 <span class="tag"> keychain</span>
             </div>
             <div class="trinket">
-                <img class="trinket-image" src="images/woodenfacekeychain.jpg">
+                <img class="trinket-image" src="Images/woodenfacekeychain.jpg">
                 <h3> Wooden Face Keychain</h3>
                 <h4> Adarsh Mani</h4>
                 <p> A wooden carved keychain of a facial expression with a metal chain extension</p>
@@ -174,7 +174,7 @@
         </div>
         <div class="column"></div> <!--Column 3-->
         <div class="trinket">
-            <img class="trinket-image" src="images/light.jpg">
+            <img class="trinket-image" src="Images/light.jpg">
             <h3> Light</h3>
             <h4> Yuki Yin</h4>
             <p>a pink sea urchin night light</p>
@@ -183,7 +183,7 @@
             <span class="tag"> animal</span>
         </div>
         <div class="trinket">
-            <img class="trinket-image" src="images/lipbalm.JPG">
+            <img class="trinket-image" src="Images/lipbalm.JPG">
             <h3> Lip balm</h3>
             <h4> Kirthiga Thevakumar</h4>
             <p>a yellow and red lip balm</p>
@@ -192,7 +192,7 @@
             <span class="tag"> red</span>
         </div>
         <div class="trinket">
-            <img class="trinket-image" src="images/Mushroom_necklace.jpg">
+            <img class="trinket-image" src="Images/Mushroom_necklace.jpg">
             <h3> Mushroom Necklace</h3>
             <h4> Dima Lavrentiev</h4>
             <p>a pendant made out of moonstone with a silver chain</p>
@@ -201,7 +201,7 @@
             <span class="tag"> plant</span>
         </div>
         <div class="trinket">
-            <img class="trinket-image" src="images/pokemon.jpg">
+            <img class="trinket-image" src="Images/pokemon.jpg">
             <h3> Pokemon</h3>
             <h4> Jose Montero</h4>
             <p>A small, plastic figure of the pokemon Garchomp</p>
@@ -210,7 +210,7 @@
             <span class="tag"> plastic</span>
         </div>
         <div class="trinket">
-            <img class="trinket-image" src="images/kellylporloaid.JPG">
+            <img class="trinket-image" src="Images/kellylporloaid.JPG">
             <h3> Polaroid Photo</h3>
             <h4> Kelly La</h4>
             <p>A polariod photo of my friends hanging out at Trinity Bellwoods</p>
@@ -219,7 +219,7 @@
             <span class="tag"> picnic</span>
         </div>
         <div class="trinket">
-            <img class="trinket-image" src="images/thao.jpg">
+            <img class="trinket-image" src="Images/thao.jpg">
             <h3> Rabbit</h3>
             <h4> Thao Nguyen</h4>
             <p>a small white ceramic chopstick holder</p>
@@ -228,7 +228,7 @@
             <span class="tag"> ceramic</span>
         </div>
         <div class="trinket">
-            <img class="trinket-image" src="images/sharpener.jpeg">
+            <img class="trinket-image" src="Images/sharpener.jpeg">
             <h3> Sharpener</h3>
             <h4> Aaryan Pashine</h4>
             <p>stolen silver sharpener</p>
@@ -246,7 +246,7 @@
             <span class="tag"> shiny</span>
         </div>
         <div class="trinket">
-            <img class="trinket-image" src="images/Bottle Boat.JPG">
+            <img class="trinket-image" src="Images/Bottle Boat.JPG">
             <h3> Toy</h3>
             <h4> Rylee Tan</h4>
             <p>a couple of sailboats inside of a glass bottle shape</p>
