--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main</title>
 
-    <link rel="stylesheet" href="CSS/main.CSS">
+    <link rel="stylesheet" href="CSS/main.css">
 
 </head>
 
